--- a/studyapp/templates/index.html
+++ b/studyapp/templates/index.html
@@ -29,16 +29,16 @@
         {% endif %}
         </h3>
         <div>Due: {{assignment.dueDate}}</div>
-        {% if assignmnet.due_now %}
+        {% if assignment.due_now %}
         Due soon! Get it done!
         {% endif %}
 {% endfor %}
 <hr>
 
-<form method="post" action="{% url 'create_task' %}">
+<form method="post" action="{% url 'create_assignment' %}">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Create Task</button>
+    <button type="submit">Create Assignment</button>
 </form>
 </body>
 </html>
