--- a/studyapp/templates/details.html
+++ b/studyapp/templates/details.html
@@ -5,11 +5,11 @@
     <title>Assignment Details</title>
 </head>
 <body>
+<!-- to view all the other information about the assignments -->
 <h1> {{ assignment.course }} {{ assignment.title }}</h1>
 <p> Description: {{ assignment.description }}</p>
 <p> Due: {{ assignment.dueDate }}</p>
 <p> Files: {{ assignment.description }}</p>
 
-<p>Back to <a herf="/">All Assignments</a></p>
 </body>
 </html>
