--- a/studyapp/templates/collaboration.html
+++ b/studyapp/templates/collaboration.html
@@ -5,6 +5,10 @@
     <title>Collaboration</title>
 </head>
 <body>
-
+ <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/">Assignment Manager</a>
+        <a href="details/">Details</a>
+        <a href="collaboration/">Collaboration</a>
+ </nav>
 </body>
 </html>
