--- a/studyapp/templates/details.html
+++ b/studyapp/templates/details.html
@@ -5,10 +5,15 @@
     <title>Details</title>
 </head>
 <body>
-<h1>My Assignment Details</h1>
-<p> {{ assignment.description }}</p>
-<p>{{ assignment.dueDate }}</p>
-<h2>Assignment files</h2>
-<p></p>
+x <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/">Assignment Manager</a>
+        <a href="details/">Details</a>
+        <a href="collaboration/">Collaboration</a>
+    </nav>
+    <h1>My Assignment Details</h1>
+    <p> {{ assignment.description }}</p>
+    <p>{{ assignment.dueDate }}</p>
+    <h2>Assignment files</h2>
+    <p></p>
 </body>
 </html>
