--- a/studyapp/templates/index.html
+++ b/studyapp/templates/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>Assignment Manager</title>
 </head>
-<h1>My Assignments</h1>
 <body>
+<h1>My Assignments</h1>
+<hr>
    {% if user.is_authenticated %}
     Welcome, {{ user.username }}!
 {% else %}
@@ -19,24 +20,16 @@
 {% endif %}
  <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/">Assignment Manager</a>
-        <a href="details/">Details</a>
         <a href="collaboration/">Collaboration</a>
     </nav>
 <h2>List of Assignments:</h2>
-{% for assignment in assignments %}
-    <hr>
-        <h3>
-        {% if assignment.completed %}
-            <s>{{ assignment.course }}</s>
-            <s>{{ assignment.title }}</s>
-        {% else %}
-            {{ assignment.course }}
-            {{ assignment.title }}
-        {% endif %}
-        </h3>
-{% endfor %}
 <hr>
-
+<ul>
+    {% for x in myassignments %}
+        <li><a href="'details/'{{ x.id }}">{{ x.assignment.course }} {{ x.assignment.title }}</a></li>
+    {% endfor %}
+</ul>
+<hr>
 <form method="post" action="{% url 'create_assignment' %}">
     {% csrf_token %}
     {{ form.as_p }}
